--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>my github account</title>
 </head>
 <body>
-    first repo my github account
+    <h1>first repo my github account</h1>
+    <h2>Mama i can code now</h2>
+    <h3>New code changed</h3>
 </body>
 </html>
